# base-api

./: Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
.github/workflows/: deploy.yml
app/core/: config.py
app/database/: db.py
app/goods/routers/: goods.py
app/utils/: logger.py
